# fann

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  snowflake_connection.py
config/: __init__.py
config/logging/: model_log.json
rec4you/recommendation_engine/: main.py
rec4you/recommendation_engine/src/: argparser.py  dataloader.py  model.py  recommender.py  utils.py
